Fix modal centering on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -3587,7 +3587,10 @@ button {
 
 .mission-modal {
   position: fixed;
-  inset: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: 10000;
   display: flex;
   align-items: center;
